--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,12 @@
 <h1>Welcome to Activity Timer</h1>
 
 
-<script>
-  $(() => { $('.jquery-test').html("jQuery is working!") })
-</script>
+<div class="welcome-page">
 
-<p class="jquery-test">jQuery is not working.</p>
+  <script>
+    $(() => { $('.jquery-test').html("jQuery is working!") })
+  </script>
+
+  <p class="jquery-test">jQuery is not working.</p>
+
+</div>
