--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,11 @@
-<h1>Welcome to Activity Timer</h1>
-
+<% @page_title = 'Welcome to Activity Timer' %>
 
 <div class="welcome-page">
 
   <script>
-    $(() => { $('.jquery-test').html("jQuery is working!") })
+    $(() => { $('#jquery-test').html('jQuery is working!') })
   </script>
 
-  <p class="jquery-test">jQuery is not working.</p>
+  <p id="jquery-test" class="text-primary">jQuery is not working.</p>
 
 </div>
