Use Bootstrap colors.

--- a/app/javascript/stylesheets/variables.scss
+++ b/app/javascript/stylesheets/variables.scss
@@ -1,5 +1,5 @@
 // Customize Bootstrap variables.
-$cyan: #ff00ff;
+// $cyan: #ff00ff;
 
 // Recompile Bootstrap using the customized variables.
 @import '~bootstrap/scss/functions';
