--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,10 +92,10 @@
       <% end %>
 
       <% if notice %>
-        <p class="page-notice">NOTICE!!! <%= notice %></p>
+        <p class="text-info"><%= notice %></p>
       <% end %>
       <% if alert %>
-        <p class="page-alert">ALERT!!! <%= alert %></p>
+        <p class="text-danger"><%= alert %></p>
       <% end %>
 
       <br />
