--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,33 +8,41 @@
 
     <div class="navbar-nav">
 
-    <%= link_to('Home', root_path,
-                class: "nav-item nav-link") %>
-    <%= link_to('Welcome', '/welcome/index',
-                class: "nav-item nav-link") %>
-    <%= link_to('Users', admin_users_path,
-                class: "nav-item nav-link") %>
+      <%= link_to('Home', root_path,
+                  class: "nav-item nav-link") %>
+      <%= link_to('Welcome', '/welcome/index',
+                  class: "nav-item nav-link") %>
+
+      <% if is_admin? %>
+
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Admin
+          </a>
+          <div class="dropdown-menu" aria-labelledby="adminDropdown">
+            <%= link_to('Users', admin_users_path,
+                        class: "nav-item nav-link") %>
+          </div>
+        </div>
+      <% end %>
 
       <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Account
+        <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= account_name %>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu" aria-labelledby="accountDropdown">
 
-
-    <% if user_signed_in? %>
-      <%= link_to('Account', edit_user_registration_path,
-                  class: "dropdown-item") %>
-      <%= link_to("Logout", destroy_user_session_path,
-                  method: :delete, class: "dropdown-item") %>
-    <% else %>
-      <%= link_to("Login", new_user_session_path,
-                  class: "dropdown-item") %>
-      <%= link_to('Register', new_user_registration_path,
-                  class: "dropdown-item") %>
-    <% end %>
-
-
+          <% if user_signed_in? %>
+            <%= link_to('Account', edit_user_registration_path,
+                        class: "dropdown-item") %>
+            <%= link_to("Logout", destroy_user_session_path,
+                        method: :delete, class: "dropdown-item") %>
+          <% else %>
+            <%= link_to("Login", new_user_session_path,
+                        class: "dropdown-item") %>
+            <%= link_to('Register', new_user_registration_path,
+                        class: "dropdown-item") %>
+          <% end %>
 
         </div>
 
