--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -41,7 +41,7 @@
 
     <div id="logo-jgio">
       <a href="/">
-        <%= image_pack_tag "jg-logo.svg", id: 'logo' %>
+        <%= image_pack_tag 'jg-logo.svg', id: 'logo' %>
         <span class="hostname">johngorman</span
       ><span class="dot">.</span
       ><span class="cc">io</span>
