--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,10 +10,11 @@
 
       <%= link_to('Home', root_path,
                   class: "nav-item nav-link") %>
-      <%= link_to('Welcome', '/welcome/index',
-                  class: "nav-item nav-link") %>
 
       <%= link_to('Clients', clients_path,
+                  class: "nav-item nav-link") %>
+
+      <%= link_to('Projects', projects_path,
                   class: "nav-item nav-link") %>
 
       <% if is_admin? %>
@@ -38,10 +39,10 @@
           <% if user_signed_in? %>
             <%= link_to('Account', edit_user_registration_path,
                         class: "dropdown-item") %>
-            <%= link_to("Logout", destroy_user_session_path,
+            <%= link_to('Logout', destroy_user_session_path,
                         method: :delete, class: "dropdown-item") %>
           <% else %>
-            <%= link_to("Login", new_user_session_path,
+            <%= link_to('Login', new_user_session_path,
                         class: "dropdown-item") %>
             <%= link_to('Register', new_user_registration_path,
                         class: "dropdown-item") %>
@@ -55,4 +56,3 @@
 
   </div>
 </nav>
-
