--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -2,7 +2,7 @@
 
   <p class="field">
     <%= form.label :name %><br>
-    <%= form.text_field :name, required: true %>
+    <%= form.text_field :name %>
   </p>
 
   <% if @client.id %>
