--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,11 +1,11 @@
-<% @page_title = "Project #{@project.client.name} - #{@project.name}" %>
+<% @page_title = @project.display_title %>
 
 <p>
   <%= link_to 'Client', client_path(@project.client) %> |
   <%= link_to 'Edit project', edit_project_path(@project) %> |
   <%= link_to 'Delete project', project_path(@project),
       method: :delete,
-      data: { confirm: "Delete project #{@project.client.name} - #{@project.name}?" } %> |
+      data: { confirm: "Delete project #{@project.display_title}?" } %> |
   <%= link_to 'New activity', new_project_activity_path(@project) %>
 </p>
 
