--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,10 +1,9 @@
 <p>
   <%= link_to 'Client', client_path(@activity.project.client) %> |
   <%= link_to 'Project', project_path(@activity.project) %>
-
   <% if @activity.id %>
     | <%= link_to 'Delete activity', activity_path(@activity),
-        method: :delete, data: { confirm: "Delete activity?" } %> |
+      method: :delete, data: { confirm: "Delete #{@activity.desc}?" } %> |
     <%= link_to 'New activity', new_project_activity_path(@activity.project) %>
   <% end %>
 </p>
