--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,3 +1,3 @@
-<% @page_title = "#{@activity.project.name} Activity" %>
+<% @page_title = @activity.project.display_title %>
 
 <%= render 'form' %>
