--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,7 +3,7 @@
 
   <p class="field">
     <%= form.label :name %><br>
-    <%= form.text_field :name, required: true %>
+    <%= form.text_field :name %>
   </p>
 
   <% if @project.id %>
