--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,3 @@
-<% @page_title = "Edit #{@project.client.name} - #{@project.name}" %>
+<% @page_title = @project.display_title %>
 
 <%= render 'form' %>
