--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
 <div class="table-responsive">
   <table class="table">
     <tr>
-      <th>Date</th>
+      <th>Start</th>
       <th class="text-right">Length</th>
       <th>Description</th>
     </tr>
@@ -22,8 +22,8 @@
         <td>
           <%= link_to(datetime_to_s(activity.start), edit_activity_path(activity)) %>
         </td>
-        <td class="text-right"><%= seconds_to_hm(activity.duration) %></td>
-        <td><%= activity.desc %></td>
+        <td class="text-right"><%= seconds_to_hm(activity.length) %></td>
+        <td><%= activity.description %></td>
       </tr>
     <% end %>
   </table>
