--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = @project.display_title %>
+<% @page_header = project_links(@project) %>
 
 <p>
   <%= link_to 'Client', client_path(@project.client) %> |
