Better project list title.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,7 +4,7 @@
 
   <table class="table">
     <tr>
-      <th>Name</th>
+      <th>Client - Project</th>
     </tr>
 
     <% @projects.order('updated_at desc').each do |project| %>
