--- a/app/javascript/stylesheets/views/global.scss
+++ b/app/javascript/stylesheets/views/global.scss
@@ -18,10 +18,22 @@ h5 {
   font-weight: bold;
 }
 
-p.error {
-  color: $danger;
-}
+/* * * * * * * * * * * *
+ * Forms
+ */
 
 form label {
   @extend .text-label;
+}
+
+// Invalid inputs.
+input.invalid,
+select.invalid,
+textarea.invalid {
+  border-color: red;
+}
+
+// Validation errors.
+p.error {
+  color: $danger;
 }
