--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,19 +1,41 @@
 <%= form_with(model: @project, data: {controller: 'form'}) do |form| %>
   <%= form.hidden_field :client_id, value: @project.client_id %>
 
-  <p class="field">
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
+  <div class="row my-2">
+    <div class="col-sm-auto">
+      <%= form.label :name %>
+    </div>
+    <div class="col-sm">
+      <%= form.text_field :name %>
+    </div>
+  </div>
 
   <% if @project.id %>
-    <p>
-      <input class="btn btn-secondary" type="submit" value="Update project">
-      <%= link_to 'Cancel', project_path(@project), class: 'btn btn-secondary' %>
-    </p>
+    <input type="submit"
+           value="Update project"
+           class="btn btn-secondary my-1 mr-1">
+
+    <%= link_to 'Delete project', project_path(@project),
+        method: :delete,
+        data: { confirm: "Delete project #{@project.display_title}?" },
+        class: "btn btn-secondary my-1 mr-1"
+      %>
+
+    <%= link_to 'Cancel', project_path(@project),
+        class: 'btn btn-secondary my-1 mr-1'
+      %>
+
   <% else %>
-    <input class="btn btn-secondary" type="submit" value="Add project">
-    <%= link_to 'Cancel', client_path(@project.client_id), class: 'btn btn-secondary' %>
+
+    <input
+      type="submit"
+      value="Add project"
+      class="btn btn-secondary my-1 mr-1">
+
+    <%= link_to 'Cancel', client_path(@project.client_id),
+      class: 'btn btn-secondary my-1 mr-1'
+    %>
+
   <% end %>
 
 <% end %>
