--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -14,7 +14,7 @@
       <%= form.label :start, 'Start time' %><br />
     </div>
     <div class="col-sm-9">
-      <%= form.datetime_field :start, required: true %>
+      <%= form.datetime_field :start %>
     </div>
   </div>
 
