--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -5,7 +5,7 @@
       <%= form.label :name %>
     </div>
     <div class="col-sm">
-      <%= form.text_field :name %>
+      <%= form.text_field :name, autofocus: true %>
     </div>
   </div>
 
