--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -6,7 +6,7 @@
       <%= form.label :name %>
     </div>
     <div class="col-sm">
-      <%= form.text_field :name %>
+      <%= form.text_field :name, autofocus: true %>
     </div>
   </div>
 
