--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,6 +11,9 @@
       <%= link_to('Home', root_path,
                   class: "nav-item nav-link") %>
 
+      <%= link_to('Timer', timer_path,
+                  class: "nav-item nav-link") %>
+
       <%= link_to('Clients', clients_path,
                   class: "nav-item nav-link") %>
 
