--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'Clients' %>
+<%= render 'layouts/page-top' %>
 
 <div class="container-fluid">
   <%= link_to 'New client', new_client_path, class: 'row mb-3' %>
