--- a/app/views/timer/_report.html.erb
+++ b/app/views/timer/_report.html.erb
@@ -1,7 +1,17 @@
 <p>This is the report!!!</p>
 
 <% @projects.order('updated_at desc').each do |project| %>
-
   <p><%= project.display_title %></p>
-
+<% end %>
+<% @projects.order('updated_at desc').each do |project| %>
+  <p><%= project.display_title %></p>
+<% end %>
+<% @projects.order('updated_at desc').each do |project| %>
+  <p><%= project.display_title %></p>
+<% end %>
+<% @projects.order('updated_at desc').each do |project| %>
+  <p><%= project.display_title %></p>
+<% end %>
+<% @projects.order('updated_at desc').each do |project| %>
+  <p><%= project.display_title %></p>
 <% end %>
