--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = @activity.project.display_title %>
 <% @page_header = project_links(@activity.project) %>
+<%= render 'layouts/page-top' %>
 
 <%= render 'form' %>
