--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = 'User' %>
+<%= render 'layouts/page-top' %>
 
   <%= tr_show :user, :first_name %>
   <%= tr_show :user, :last_name %>
