--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,61 +1,36 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar">
+  <div class="navbar-nav">
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <% if user_signed_in? %>
 
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <a class="nav-link" href="<%= timer_path %>">
+        <%= image_pack_tag 'jg-logo.svg', id: 'logo', height: '50px', width: '50px' %>
+      </a>
 
-    <div class="navbar-nav">
-
-      <%= link_to('Home', root_path,
-                  class: "nav-item nav-link") %>
-
-      <%= link_to('Timer', timer_path,
-                  class: "nav-item nav-link") %>
-
-      <%= link_to('Clients', clients_path,
-                  class: "nav-item nav-link") %>
-
-      <%= link_to('Projects', projects_path,
-                  class: "nav-item nav-link") %>
+      <%= link_to('Timer', timer_path, class: "nav-link") %>
+      <%= link_to('Clients', clients_path, class: "nav-link") %>
+      <%= link_to('Projects', projects_path, class: "nav-link") %>
 
       <% if is_admin? %>
-
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Admin
-          </a>
-          <div class="dropdown-menu" aria-labelledby="adminDropdown">
-            <%= link_to('Users', admin_users_path,
-                        class: "nav-item nav-link") %>
-          </div>
-        </div>
+        <%= link_to('Users', admin_users_path, class: "nav-link") %>
       <% end %>
 
-      <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= account_name %>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="accountDropdown">
+      <%= link_to('Account', edit_user_registration_path,
+                  class: "nav-link") %>
+      <%= link_to('Logout', destroy_user_session_path,
+                  method: :delete, class: "nav-link") %>
 
-          <% if user_signed_in? %>
-            <%= link_to('Account', edit_user_registration_path,
-                        class: "dropdown-item") %>
-            <%= link_to('Logout', destroy_user_session_path,
-                        method: :delete, class: "dropdown-item") %>
-          <% else %>
-            <%= link_to('Login', new_user_session_path,
-                        class: "dropdown-item") %>
-            <%= link_to('Register', new_user_registration_path,
-                        class: "dropdown-item") %>
-          <% end %>
+    <% else %>
 
-        </div>
+      <%= image_pack_tag 'jg-logo.svg', id: 'logo',
+        height: '50px', width: '50px' %>
 
-      </div>
+      <%= link_to('Login', new_user_session_path,
+                  class: "nav-link") %>
+      <%= link_to('Register', new_user_registration_path,
+                  class: "nav-link") %>
+    <% end %>
 
-    </div>
 
   </div>
 </nav>
