--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,5 @@
 <% @page_title = @project.display_title %>
 <% @page_header = project_links(@project) %>
+<%= render 'layouts/page-top' %>
 
 <%= render 'form' %>
