--- a/app/javascript/stylesheets/views/vendor.scss
+++ b/app/javascript/stylesheets/views/vendor.scss
@@ -2,6 +2,10 @@
 
 @import '../variables';
 
+@import '@primer/octicons/build/build.css';
+
+/* Unused.
+
 // @import 'datatables.net-bs4/css/dataTables.bootstrap4';
 // @import 'datatables.net-scroller-bs4/css/scroller.bootstrap4.css';
 
@@ -30,3 +34,5 @@ div.dataTables_paginate {
 nav.pagination span {
   margin-right: 10px;
 }
+
+*/
