--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,11 +3,11 @@
 
     <% if user_signed_in? %>
 
-      <a class="nav-link" href="<%= timer_path %>">
-        <%= image_pack_tag 'jg-logo.svg', id: 'logo', height: '50px', width: '50px' %>
-      </a>
+      <%= link_to image_pack_tag('jg-logo.svg', id: 'logo', size: '50'),
+        timer_path, class: "nav-link" %>
 
       <%= link_to('Timer', timer_path, class: "nav-link") %>
+
       <%= link_to('Clients', clients_path, class: "nav-link") %>
       <%= link_to('Projects', projects_path, class: "nav-link") %>
 
@@ -22,8 +22,7 @@
 
     <% else %>
 
-      <%= image_pack_tag 'jg-logo.svg', id: 'logo',
-        height: '50px', width: '50px' %>
+      <%= image_pack_tag 'jg-logo.svg', id: 'logo', size: '50' %>
 
       <%= link_to('Login', new_user_session_path,
                   class: "nav-link") %>
