--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
   <body>
     <div class="page-layout">
 
-      <div class="nav-outer">
+      <div class="nav-space">
         <div class="nav-panel">
           <%= render 'layouts/nav' %>
         </div>
       </div>
 
-      <div class="pl-3 w-100">
+      <div class="content-panel">
         <%= yield %>
       </div>
 
