--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -6,9 +6,9 @@
 
   <%= form_with(model: @timer, url: timer_path, data: {controller: 'form'}) do |form| %>
 
-    <%= form.text_field :description,
-      data: { target: 'clock.desc' },
-      placeholder: 'Activity description' %>
+    <%= form.text_field :name,
+      data: { target: 'clock.name' },
+      placeholder: 'Activity' %>
 
     <%= form.number_field :project_id,
       data: { target: 'clock.project' },
