--- a/app/views/timer/_report.html.erb
+++ b/app/views/timer/_report.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>Start</th>
       <th class="text-right">Length</th>
-      <th>Description</th>
+      <th>Activity</th>
       <th>Client</th>
       <th>Project</th>
     </tr>
@@ -14,7 +14,7 @@
           <%= link_to(datetime_to_s(activity.start), edit_activity_path(activity)) %>
         </td>
         <td class="text-right"><%= seconds_to_hm(activity.length) %></td>
-        <td><%= activity.description %></td>
+        <td><%= activity.name %></td>
         <td><%= activity.client_name %></td>
         <td><%= activity.project_name %></td>
       </tr>
