Remove jQuery from clock controller.

--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -30,8 +30,11 @@
 
   <% end %>
 
-  <div id="timer_start" class="d-none"><%= @timer.start %></div>
-  <div id="ticker"></div>
+  <div id="timer_start" class="d-none" data-target="clock.start">
+    <%= @timer.start %>
+  </div>
+
+  <div id="ticker" data-target="clock.ticker"></div>
 
   <% if @timer.persisted? %>
 
