--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -10,22 +10,13 @@
       data: { target: 'clock.name' },
       placeholder: 'Activity' %>
 
-    <%= form.number_field :project_id,
-      data: { target: 'clock.project' },
-      placeholder: 'Project' %>
+    <%= form.select(:project_id, @project_options, {},
+               { 'data-target': 'clock.project' }) %>
 
-    <% if @timer.persisted? %>
-
-      <button type="submit">
-          <%= octicon 'pin' %>
-      </button>
-
-    <% else %>
-
+    <% unless @timer.persisted? %>
       <button type="submit">
           <%= octicon 'play' %>
       </button>
-
     <% end %>
 
   <% end %>
